pyproject.toml dynamic version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,6 @@ build-backend = "maturin"
 
 [project]
 name = "xoryaml"
-version = "0.1.0"
 description = "yaml serializer and deserializer backed by yaml_rust2"
 readme = "README.md"
 requires-python = ">=3.9,<4"
@@ -26,7 +25,7 @@ classifiers = [
     "Typing :: Typed",
 ]
 optional-dependencies.test = ["pyyaml", "ryaml", "pytest", "pytest-benchmark"]
-
+dynamic = ["version"]
 
 [project.urls]
 homepage = "https://github.com/jessekv/xoryaml"
