--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
     "Operating System :: MacOS",
     "Typing :: Typed",
 ]
-optional-dependencies.test = ["pyyaml", "pytest", "pytest-benchmark"]
+optional-dependencies.test = ["pyyaml", "pytest", "pytest-benchmark", "tzdata"]
 dynamic = ["version"]
 
 [project.urls]
