[skip ci] set version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ build-backend = "maturin"
 
 [project]
 name = "xoryaml"
+version = "0.1.0"
 description = "yaml serializer and deserializer backed by yaml_rust2"
 readme = "README.md"
 requires-python = ">=3.9,<4"
@@ -26,7 +27,6 @@ classifiers = [
 ]
 optional-dependencies.test = ["pytest", "tzdata"]
 optional-dependencies.bench = ["pyyaml", "pytest-benchmark", "xoryaml[test]"]
-dynamic = ["version"]
 
 [project.urls]
 homepage = "https://github.com/jessekv/xoryaml"
